@@ -21,14 +21,14 @@ package org.xwiki.crypto.store.wiki.internal;
 
 import java.lang.reflect.Field;
 import java.math.BigInteger;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
+import javax.inject.Named;
 import javax.inject.Provider;
 
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.xwiki.component.util.ReflectionUtils;
 import org.xwiki.crypto.BinaryStringEncoder;
 import org.xwiki.crypto.pkix.CertificateFactory;
@@ -36,7 +36,6 @@ import org.xwiki.crypto.pkix.params.CertifiedPublicKey;
 import org.xwiki.crypto.pkix.params.x509certificate.DistinguishedName;
 import org.xwiki.crypto.pkix.params.x509certificate.X509CertifiedPublicKey;
 import org.xwiki.crypto.pkix.params.x509certificate.extension.X509Extensions;
-import org.xwiki.crypto.store.CertificateStore;
 import org.xwiki.crypto.store.StoreReference;
 import org.xwiki.crypto.store.WikiStoreReference;
 import org.xwiki.crypto.store.wiki.internal.query.AbstractX509IssuerAndSerialQuery;
@@ -54,7 +53,9 @@ import org.xwiki.model.reference.WikiReference;
 import org.xwiki.query.Query;
 import org.xwiki.query.QueryManager;
 import org.xwiki.test.annotation.ComponentList;
-import org.xwiki.test.mockito.MockitoComponentMockingRule;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+import org.xwiki.test.junit5.mockito.InjectMockComponents;
+import org.xwiki.test.junit5.mockito.MockComponent;
 
 import com.xpn.xwiki.XWiki;
 import com.xpn.xwiki.XWikiContext;
@@ -64,9 +65,8 @@ import com.xpn.xwiki.internal.model.reference.CurrentReferenceEntityReferenceRes
 import com.xpn.xwiki.internal.model.reference.CurrentStringEntityReferenceResolver;
 import com.xpn.xwiki.objects.BaseObject;
 
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.Matchers.contains;
-import static org.junit.Assert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertIterableEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
@@ -81,6 +81,7 @@ import static org.mockito.Mockito.when;
  * @version $Id$
  * @since 6.0
  */
+@ComponentTest
 @ComponentList({
     CurrentReferenceDocumentReferenceResolver.class,
     CurrentReferenceEntityReferenceResolver.class,
@@ -88,7 +89,7 @@ import static org.mockito.Mockito.when;
     LocalStringEntityReferenceSerializer.class,
     DefaultSymbolScheme.class
 })
-public class X509CertificateWikiStoreTest
+class X509CertificateWikiStoreTest
 {
     private static final byte[] CERTIFICATE = "certificate".getBytes();
     private static final String ENCODED_CERTIFICATE = "encoded_certificate";
@@ -113,23 +114,42 @@ public class X509CertificateWikiStoreTest
     private static final StoreReference DOC_STORE_REF = new WikiStoreReference(DOC_STORE_ENTREF);
     private static final StoreReference SPACE_STORE_REF = new WikiStoreReference(SPACE_STORE_ENTREF);
 
-    protected static final String BIND_KEYID = getFieldValue(AbstractX509KeyIdentifierQuery.class, "KEYID");
-    protected static final String BIND_ISSUER = getFieldValue(AbstractX509IssuerAndSerialQuery.class, "ISSUER");
-    protected static final String BIND_SERIAL = getFieldValue(AbstractX509IssuerAndSerialQuery.class, "SERIAL");
-    protected static final String BIND_SUBJECT = getFieldValue(AbstractX509SubjectQuery.class, "SUBJECT");
-
+    private static final String BIND_KEYID = getFieldValue(AbstractX509KeyIdentifierQuery.class, "KEYID");
+    private static final String BIND_ISSUER = getFieldValue(AbstractX509IssuerAndSerialQuery.class, "ISSUER");
+    private static final String BIND_SERIAL = getFieldValue(AbstractX509IssuerAndSerialQuery.class, "SERIAL");
+    private static final String BIND_SUBJECT = getFieldValue(AbstractX509SubjectQuery.class, "SUBJECT");
     private static final String BIND_STORE = getFieldValue(AbstractX509StoreQuery.class, "STORE");
 
-    @Rule
-    public MockitoComponentMockingRule<CertificateStore> mocker =
-        new MockitoComponentMockingRule<CertificateStore>(X509CertificateWikiStore.class);
+    @InjectMockComponents
+    private X509CertificateWikiStore store;
+
+    @MockComponent
+    @Named("default")
+    private EntityReferenceProvider defaultEntityReferenceProvider;
+
+    @MockComponent
+    @Named("current")
+    private EntityReferenceProvider currentEntityReferenceProvider;
+
+    @MockComponent
+    private Provider<XWikiContext> xcontextProvider;
+
+    @MockComponent
+    @Named("Base64")
+    private BinaryStringEncoder encoder;
+
+    @MockComponent
+    @Named("X509")
+    private CertificateFactory certificateFactory;
+
+    @MockComponent
+    private QueryManager queryManager;
 
     private XWikiContext xcontext;
+
     private XWiki xwiki;
 
     private Query query;
-
-    private CertificateStore store;
 
     private static String getFieldValue(Class<?> clazz, String fieldName)
     {
@@ -147,35 +167,28 @@ public class X509CertificateWikiStoreTest
         }
     }
 
-    @Before
-    public void setUp() throws Exception
+    @BeforeEach
+    void setUp() throws Exception
     {
-        this.mocker.registerMockComponent(EntityReferenceProvider.class, "default");
+        when(this.currentEntityReferenceProvider.getDefaultReference(EntityType.WIKI)).thenReturn(WIKI_REFERENCE);
+        when(this.currentEntityReferenceProvider.getDefaultReference(EntityType.SPACE)).thenReturn(SPACE_REFERENCE);
+        when(this.currentEntityReferenceProvider.getDefaultReference(EntityType.DOCUMENT))
+            .thenReturn(DOCUMENT_REFERENCE);
 
-        EntityReferenceProvider valueProvider = this.mocker.registerMockComponent(EntityReferenceProvider.class, "current");
-        when(valueProvider.getDefaultReference(EntityType.WIKI)).thenReturn(WIKI_REFERENCE);
-        when(valueProvider.getDefaultReference(EntityType.SPACE)).thenReturn(SPACE_REFERENCE);
-        when(valueProvider.getDefaultReference(EntityType.DOCUMENT)).thenReturn(DOCUMENT_REFERENCE);
+        this.xcontext = mock(XWikiContext.class);
+        when(this.xcontextProvider.get()).thenReturn(this.xcontext);
+        this.xwiki = mock(XWiki.class);
+        when(this.xcontext.getWiki()).thenReturn(this.xwiki);
 
-        Provider<XWikiContext> xcontextProvider = mocker.registerMockComponent(XWikiContext.TYPE_PROVIDER);
-        xcontext = mock(XWikiContext.class);
-        when(xcontextProvider.get()).thenReturn(xcontext);
-        xwiki = mock(com.xpn.xwiki.XWiki.class);
-        when(xcontext.getWiki()).thenReturn(xwiki);
+        when(this.encoder.encode(CERTIFICATE, 64)).thenReturn(ENCODED_CERTIFICATE);
+        when(this.encoder.decode(ENCODED_CERTIFICATE)).thenReturn(CERTIFICATE);
+        when(this.encoder.encode(SUBJECT_KEYID)).thenReturn(ENCODED_SUBJECTKEYID);
+        when(this.encoder.decode(ENCODED_SUBJECTKEYID)).thenReturn(SUBJECT_KEYID);
 
-        BinaryStringEncoder encoder = mocker.getInstance(BinaryStringEncoder.class, "Base64");
-        when(encoder.encode(CERTIFICATE, 64)).thenReturn(ENCODED_CERTIFICATE);
-        when(encoder.decode(ENCODED_CERTIFICATE)).thenReturn(CERTIFICATE);
-        when(encoder.encode(SUBJECT_KEYID)).thenReturn(ENCODED_SUBJECTKEYID);
-        when(encoder.decode(ENCODED_SUBJECTKEYID)).thenReturn(SUBJECT_KEYID);
-
-        QueryManager queryManager = mocker.getInstance(QueryManager.class);
-        query = mock(Query.class);
-        when(query.bindValue(any(String.class), any())).thenReturn(query);
-        when(query.setWiki(WIKI)).thenReturn(query);
-        when(queryManager.createQuery(any(String.class), any(String.class))).thenReturn(query);
-
-        store = mocker.getComponentUnderTest();
+        this.query = mock(Query.class);
+        when(this.query.bindValue(any(String.class), any())).thenReturn(this.query);
+        when(this.query.setWiki(WIKI)).thenReturn(this.query);
+        when(this.queryManager.createQuery(any(String.class), any(String.class))).thenReturn(this.query);
     }
 
     private CertifiedPublicKey getMockedCertificate(boolean hasKeyId) throws Exception
@@ -198,246 +211,276 @@ public class X509CertificateWikiStoreTest
     }
 
     @Test
-    public void testStoringNewCertificateWithKeyIdToDocument() throws Exception
+    void storingNewCertificateWithKeyIdToDocument() throws Exception
     {
         XWikiDocument storeDoc = mock(XWikiDocument.class);
-        when(xwiki.getDocument(new DocumentReference(WIKI, SPACE, DOCUMENT), xcontext)).thenReturn(storeDoc);
+        when(this.xwiki.getDocument(new DocumentReference(WIKI, SPACE, DOCUMENT), this.xcontext)).thenReturn(storeDoc);
 
         BaseObject certObj = mock(BaseObject.class);
-        when(storeDoc.newXObject(X509CertificateWikiStore.CERTIFICATECLASS, xcontext)).thenReturn(certObj);
+        when(storeDoc.newXObject(X509CertificateWikiStore.CERTIFICATECLASS, this.xcontext)).thenReturn(certObj);
 
-        store.store(DOC_STORE_REF, getMockedCertificate(true));
+        this.store.store(DOC_STORE_REF, getMockedCertificate(true));
 
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID, ENCODED_SUBJECTKEYID);
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER, ISSUER);
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL, SERIAL.toString());
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT, SUBJECT);
-        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE, ENCODED_CERTIFICATE);
+        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE,
+            ENCODED_CERTIFICATE);
 
-        verify(xwiki).saveDocument(storeDoc, xcontext);
+        verify(this.xwiki).saveDocument(storeDoc, this.xcontext);
     }
 
     @Test
-    public void testStoringNewCertificateWithKeyIdToSpace() throws Exception
+    void storingNewCertificateWithKeyIdToSpace() throws Exception
     {
         XWikiDocument storeDoc = mock(XWikiDocument.class);
-        when(xwiki.getDocument(new DocumentReference(WIKI, SPACE, ENCODED_SUBJECTKEYID), xcontext)).thenReturn(storeDoc);
+        when(this.xwiki.getDocument(new DocumentReference(WIKI, SPACE, ENCODED_SUBJECTKEYID), this.xcontext))
+            .thenReturn(storeDoc);
 
         BaseObject certObj = mock(BaseObject.class);
-        when(storeDoc.newXObject(X509CertificateWikiStore.CERTIFICATECLASS, xcontext)).thenReturn(certObj);
+        when(storeDoc.newXObject(X509CertificateWikiStore.CERTIFICATECLASS, this.xcontext)).thenReturn(certObj);
 
-        store.store(SPACE_STORE_REF, getMockedCertificate(true));
+        this.store.store(SPACE_STORE_REF, getMockedCertificate(true));
 
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID, ENCODED_SUBJECTKEYID);
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER, ISSUER);
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL, SERIAL.toString());
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT, SUBJECT);
-        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE, ENCODED_CERTIFICATE);
+        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE,
+            ENCODED_CERTIFICATE);
 
-        verify(xwiki).saveDocument(storeDoc, xcontext);
+        verify(this.xwiki).saveDocument(storeDoc, this.xcontext);
     }
 
     @Test
-    public void testStoringNewCertificateWithoutKeyIdToDocument() throws Exception
+    void storingNewCertificateWithoutKeyIdToDocument() throws Exception
     {
         XWikiDocument storeDoc = mock(XWikiDocument.class);
-        when(xwiki.getDocument(new DocumentReference(WIKI, SPACE, DOCUMENT), xcontext)).thenReturn(storeDoc);
+        when(this.xwiki.getDocument(new DocumentReference(WIKI, SPACE, DOCUMENT), this.xcontext)).thenReturn(storeDoc);
 
         BaseObject certObj = mock(BaseObject.class);
-        when(storeDoc.newXObject(X509CertificateWikiStore.CERTIFICATECLASS, xcontext)).thenReturn(certObj);
+        when(storeDoc.newXObject(X509CertificateWikiStore.CERTIFICATECLASS, this.xcontext)).thenReturn(certObj);
 
-        store.store(DOC_STORE_REF, getMockedCertificate(false));
+        this.store.store(DOC_STORE_REF, getMockedCertificate(false));
 
-        verify(certObj, never()).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID, ENCODED_SUBJECTKEYID);
+        verify(certObj, never()).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID,
+            ENCODED_SUBJECTKEYID);
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER, ISSUER);
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL, SERIAL.toString());
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT, SUBJECT);
-        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE, ENCODED_CERTIFICATE);
+        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE,
+            ENCODED_CERTIFICATE);
 
-        verify(xwiki).saveDocument(storeDoc, xcontext);
+        verify(this.xwiki).saveDocument(storeDoc, this.xcontext);
     }
 
     @Test
-    public void testStoringNewCertificateWithoutKeyIdToSpace() throws Exception
+    void storingNewCertificateWithoutKeyIdToSpace() throws Exception
     {
         XWikiDocument storeDoc = mock(XWikiDocument.class);
-        when(xwiki.getDocument(new DocumentReference(WIKI, SPACE, SERIAL.toString() + ", " + ISSUER), xcontext)).thenReturn(storeDoc);
+        when(this.xwiki.getDocument(new DocumentReference(WIKI, SPACE, SERIAL.toString() + ", " + ISSUER),
+            this.xcontext)).thenReturn(storeDoc);
 
         BaseObject certObj = mock(BaseObject.class);
-        when(storeDoc.newXObject(X509CertificateWikiStore.CERTIFICATECLASS, xcontext)).thenReturn(certObj);
+        when(storeDoc.newXObject(X509CertificateWikiStore.CERTIFICATECLASS, this.xcontext)).thenReturn(certObj);
 
-        store.store(SPACE_STORE_REF, getMockedCertificate(false));
+        this.store.store(SPACE_STORE_REF, getMockedCertificate(false));
 
-        verify(certObj, never()).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID, ENCODED_SUBJECTKEYID);
+        verify(certObj, never()).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID,
+            ENCODED_SUBJECTKEYID);
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER, ISSUER);
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL, SERIAL.toString());
         verify(certObj).setStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT, SUBJECT);
-        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE, ENCODED_CERTIFICATE);
+        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE,
+            ENCODED_CERTIFICATE);
 
-        verify(xwiki).saveDocument(storeDoc, xcontext);
+        verify(this.xwiki).saveDocument(storeDoc, this.xcontext);
     }
 
     @Test
-    public void testUpdatingCertificateWithKeyIdToDocument() throws Exception
+    void updatingCertificateWithKeyIdToDocument() throws Exception
     {
         XWikiDocument storeDoc = mock(XWikiDocument.class);
-        when(xwiki.getDocument(new DocumentReference(WIKI, SPACE, DOCUMENT), xcontext)).thenReturn(storeDoc);
+        when(this.xwiki.getDocument(new DocumentReference(WIKI, SPACE, DOCUMENT), this.xcontext)).thenReturn(storeDoc);
 
         BaseObject certObj = mock(BaseObject.class);
         when(storeDoc.getXObject(X509CertificateWikiStore.CERTIFICATECLASS, 123)).thenReturn(certObj);
 
-        when(query.<Object[]>execute()).thenReturn(Collections.singletonList(new Object[]{"space.document", 123}));
+        when(this.query.<Object[]>execute()).thenReturn(Collections.singletonList(new Object[]{"space.document", 123}));
 
-        store.store(DOC_STORE_REF, getMockedCertificate(true));
+        this.store.store(DOC_STORE_REF, getMockedCertificate(true));
 
-        verify(query).bindValue(BIND_KEYID, ENCODED_SUBJECTKEYID);
-        verify(query).bindValue(BIND_STORE, FULLNAME);
+        verify(this.query).bindValue(BIND_KEYID, ENCODED_SUBJECTKEYID);
+        verify(this.query).bindValue(BIND_STORE, FULLNAME);
 
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT), any(String.class));
-        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE, ENCODED_CERTIFICATE);
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT),
+            any(String.class));
+        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE,
+            ENCODED_CERTIFICATE);
 
-        verify(xwiki).saveDocument(storeDoc, xcontext);
+        verify(this.xwiki).saveDocument(storeDoc, this.xcontext);
     }
 
     @Test
-    public void testUpdatingCertificateWithKeyIdToSpace() throws Exception
+    void updatingCertificateWithKeyIdToSpace() throws Exception
     {
         XWikiDocument storeDoc = mock(XWikiDocument.class);
-        when(xwiki.getDocument(new DocumentReference(WIKI, SPACE, ENCODED_SUBJECTKEYID), xcontext)).thenReturn(storeDoc);
+        when(this.xwiki.getDocument(new DocumentReference(WIKI, SPACE, ENCODED_SUBJECTKEYID), this.xcontext))
+            .thenReturn(storeDoc);
 
         BaseObject certObj = mock(BaseObject.class);
         when(storeDoc.getXObject(X509CertificateWikiStore.CERTIFICATECLASS, 0)).thenReturn(certObj);
 
-        when(query.<Object[]>execute()).thenReturn(Collections.singletonList(new Object[]{"space." + ENCODED_SUBJECTKEYID, 0}));
+        when(this.query.<Object[]>execute())
+            .thenReturn(Collections.singletonList(new Object[]{"space." + ENCODED_SUBJECTKEYID, 0}));
 
-        store.store(SPACE_STORE_REF, getMockedCertificate(true));
+        this.store.store(SPACE_STORE_REF, getMockedCertificate(true));
 
-        verify(query).bindValue(BIND_KEYID, ENCODED_SUBJECTKEYID);
-        verify(query).bindValue(BIND_STORE, SPACE);
+        verify(this.query).bindValue(BIND_KEYID, ENCODED_SUBJECTKEYID);
+        verify(this.query).bindValue(BIND_STORE, SPACE);
 
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT), any(String.class));
-        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE, ENCODED_CERTIFICATE);
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT),
+            any(String.class));
+        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE,
+            ENCODED_CERTIFICATE);
 
-        verify(xwiki).saveDocument(storeDoc, xcontext);
+        verify(this.xwiki).saveDocument(storeDoc, this.xcontext);
     }
 
     @Test
-    public void testUpdatingCertificateWithoutKeyIdToDocument() throws Exception
+    void updatingCertificateWithoutKeyIdToDocument() throws Exception
     {
         XWikiDocument storeDoc = mock(XWikiDocument.class);
-        when(xwiki.getDocument(new DocumentReference(WIKI, SPACE, DOCUMENT), xcontext)).thenReturn(storeDoc);
+        when(this.xwiki.getDocument(new DocumentReference(WIKI, SPACE, DOCUMENT), this.xcontext)).thenReturn(storeDoc);
 
         BaseObject certObj = mock(BaseObject.class);
         when(storeDoc.getXObject(X509CertificateWikiStore.CERTIFICATECLASS, 123)).thenReturn(certObj);
 
-        when(query.<Object[]>execute()).thenReturn(Collections.singletonList(new Object[]{"space.document", 123}));
+        when(this.query.<Object[]>execute()).thenReturn(Collections.singletonList(new Object[]{"space.document", 123}));
 
-        store.store(DOC_STORE_REF, getMockedCertificate(false));
+        this.store.store(DOC_STORE_REF, getMockedCertificate(false));
 
-        verify(query).bindValue(BIND_ISSUER, ISSUER);
-        verify(query).bindValue(BIND_SERIAL, SERIAL.toString());
-        verify(query).bindValue(BIND_STORE, FULLNAME);
+        verify(this.query).bindValue(BIND_ISSUER, ISSUER);
+        verify(this.query).bindValue(BIND_SERIAL, SERIAL.toString());
+        verify(this.query).bindValue(BIND_STORE, FULLNAME);
 
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT), any(String.class));
-        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE, ENCODED_CERTIFICATE);
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT),
+            any(String.class));
+        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE,
+            ENCODED_CERTIFICATE);
 
-        verify(xwiki).saveDocument(storeDoc, xcontext);
+        verify(this.xwiki).saveDocument(storeDoc, this.xcontext);
     }
 
     @Test
-    public void testUpdatingCertificateWithoutKeyIdToSpace() throws Exception
+    void updatingCertificateWithoutKeyIdToSpace() throws Exception
     {
         XWikiDocument storeDoc = mock(XWikiDocument.class);
-        when(xwiki.getDocument(new DocumentReference(WIKI, SPACE, SERIAL.toString() + ", " + ISSUER), xcontext)).thenReturn(storeDoc);
+        when(this.xwiki.getDocument(new DocumentReference(WIKI, SPACE, SERIAL.toString() + ", " + ISSUER),
+            this.xcontext)).thenReturn(storeDoc);
 
         BaseObject certObj = mock(BaseObject.class);
         when(storeDoc.getXObject(X509CertificateWikiStore.CERTIFICATECLASS, 0)).thenReturn(certObj);
 
-        when(query.<Object[]>execute()).thenReturn(
+        when(this.query.<Object[]>execute()).thenReturn(
             Collections.singletonList(new Object[]{"space." + SERIAL.toString() + ", " + ISSUER, 0}));
 
-        store.store(SPACE_STORE_REF, getMockedCertificate(false));
+        this.store.store(SPACE_STORE_REF, getMockedCertificate(false));
 
-        verify(query).bindValue(BIND_ISSUER, ISSUER);
-        verify(query).bindValue(BIND_SERIAL, SERIAL.toString());
-        verify(query).bindValue(BIND_STORE, SPACE);
+        verify(this.query).bindValue(BIND_ISSUER, ISSUER);
+        verify(this.query).bindValue(BIND_SERIAL, SERIAL.toString());
+        verify(this.query).bindValue(BIND_STORE, SPACE);
 
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL), any(String.class));
-        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT), any(String.class));
-        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE, ENCODED_CERTIFICATE);
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_KEYID),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_ISSUER),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SERIAL),
+            any(String.class));
+        verify(certObj, never()).setStringValue(eq(X509CertificateWikiStore.CERTIFICATECLASS_PROP_SUBJECT),
+            any(String.class));
+        verify(certObj).setLargeStringValue(X509CertificateWikiStore.CERTIFICATECLASS_PROP_CERTIFICATE,
+            ENCODED_CERTIFICATE);
 
-        verify(xwiki).saveDocument(storeDoc, xcontext);
+        verify(this.xwiki).saveDocument(storeDoc, this.xcontext);
     }
 
     private CertifiedPublicKey mockSingleCertQuery() throws Exception
     {
         CertifiedPublicKey certificate = getMockedCertificate(true);
-        CertificateFactory factory = mocker.getInstance(CertificateFactory.class, "X509");
-        when(factory.decode(CERTIFICATE)).thenReturn(certificate);
+        when(this.certificateFactory.decode(CERTIFICATE)).thenReturn(certificate);
 
-        when(query.<String>execute()).thenReturn(Collections.singletonList(ENCODED_CERTIFICATE));
+        when(this.query.<String>execute()).thenReturn(List.of(ENCODED_CERTIFICATE));
         return certificate;
     }
 
     @Test
-    public void testRetrievingCertificateUsingKeyIdFromDocument() throws Exception
+    void retrievingCertificateUsingKeyIdFromDocument() throws Exception
     {
         CertifiedPublicKey certificate = mockSingleCertQuery();
 
-        assertThat(this.store.getCertificateProvider(DOC_STORE_REF).getCertificate(SUBJECT_KEYID),
-            equalTo(certificate));
+        assertEquals(certificate,
+            this.store.getCertificateProvider(DOC_STORE_REF).getCertificate(SUBJECT_KEYID));
 
         verify(this.query).bindValue(BIND_KEYID, ENCODED_SUBJECTKEYID);
         verify(this.query, times(3)).bindValue(BIND_STORE, FULLNAME);
     }
 
     @Test
-    public void testRetrievingCertificateUsingKeyIdFromSpace() throws Exception
+    void retrievingCertificateUsingKeyIdFromSpace() throws Exception
     {
         CertifiedPublicKey certificate = mockSingleCertQuery();
 
-        assertThat(this.store.getCertificateProvider(SPACE_STORE_REF).getCertificate(SUBJECT_KEYID),
-            equalTo(certificate));
+        assertEquals(certificate,
+            this.store.getCertificateProvider(SPACE_STORE_REF).getCertificate(SUBJECT_KEYID));
 
         verify(this.query).bindValue(BIND_KEYID, ENCODED_SUBJECTKEYID);
         verify(this.query, times(3)).bindValue(BIND_STORE, SPACE);
     }
 
     @Test
-    public void testRetrievingCertificateUsingIssueAndSerialFromDocument() throws Exception
+    void retrievingCertificateUsingIssueAndSerialFromDocument() throws Exception
     {
         CertifiedPublicKey certificate = mockSingleCertQuery();
 
-        assertThat(store.getCertificateProvider(DOC_STORE_REF).getCertificate(new DistinguishedName(ISSUER), SERIAL),
-            equalTo(certificate));
+        assertEquals(certificate,
+            this.store.getCertificateProvider(DOC_STORE_REF).getCertificate(new DistinguishedName(ISSUER), SERIAL));
 
-        verify(query).bindValue(BIND_ISSUER, ISSUER);
-        verify(query).bindValue(BIND_SERIAL, SERIAL.toString());
-        verify(query, times(3)).bindValue(BIND_STORE, FULLNAME);
+        verify(this.query).bindValue(BIND_ISSUER, ISSUER);
+        verify(this.query).bindValue(BIND_SERIAL, SERIAL.toString());
+        verify(this.query, times(3)).bindValue(BIND_STORE, FULLNAME);
     }
 
     @Test
-    public void testRetrievingCertificateUsingIssueAndSerialFromSpace() throws Exception
+    void retrievingCertificateUsingIssueAndSerialFromSpace() throws Exception
     {
         CertifiedPublicKey certificate = mockSingleCertQuery();
 
-        assertThat(store.getCertificateProvider(SPACE_STORE_REF).getCertificate(new DistinguishedName(ISSUER), SERIAL),
-            equalTo(certificate));
+        assertEquals(certificate,
+            this.store.getCertificateProvider(SPACE_STORE_REF).getCertificate(new DistinguishedName(ISSUER), SERIAL));
 
-        verify(query).bindValue(BIND_ISSUER, ISSUER);
-        verify(query).bindValue(BIND_SERIAL, SERIAL.toString());
-        verify(query, times(3)).bindValue(BIND_STORE, SPACE);
+        verify(this.query).bindValue(BIND_ISSUER, ISSUER);
+        verify(this.query).bindValue(BIND_SERIAL, SERIAL.toString());
+        verify(this.query, times(3)).bindValue(BIND_STORE, SPACE);
     }
 
     private CertifiedPublicKey[] mockMultiCertsQuery() throws Exception
@@ -447,61 +490,58 @@ public class X509CertificateWikiStoreTest
         String encodedCert2 = "encoded_certificate2";
         certs[0] = getMockedCertificate(true);
         certs[1] = getMockedCertificate(false);
-        CertificateFactory factory = this.mocker.getInstance(CertificateFactory.class, "X509");
-        when(factory.decode(CERTIFICATE)).thenReturn(certs[0]);
-        when(factory.decode(cert2)).thenReturn(certs[1]);
+        when(this.certificateFactory.decode(CERTIFICATE)).thenReturn(certs[0]);
+        when(this.certificateFactory.decode(cert2)).thenReturn(certs[1]);
 
-        BinaryStringEncoder encoder = this.mocker.getInstance(BinaryStringEncoder.class, "Base64");
-        when(encoder.encode(cert2, 64)).thenReturn(encodedCert2);
-        when(encoder.decode(encodedCert2)).thenReturn(cert2);
+        when(this.encoder.encode(cert2, 64)).thenReturn(encodedCert2);
+        when(this.encoder.decode(encodedCert2)).thenReturn(cert2);
 
-        when(this.query.<String>execute()).thenReturn(Arrays.asList(ENCODED_CERTIFICATE, encodedCert2));
+        when(this.query.<String>execute()).thenReturn(List.of(ENCODED_CERTIFICATE, encodedCert2));
 
         return certs;
     }
 
     @Test
-    public void testRetrievingCertificatesUsingSubjectFromDocument() throws Exception
+    void retrievingCertificatesUsingSubjectFromDocument() throws Exception
     {
         CertifiedPublicKey[] certs = mockMultiCertsQuery();
 
-        assertThat(this.store.getCertificateProvider(DOC_STORE_REF).getCertificate(new DistinguishedName(SUBJECT)),
-            contains(certs));
+        assertIterableEquals(List.of(certs),
+            this.store.getCertificateProvider(DOC_STORE_REF).getCertificate(new DistinguishedName(SUBJECT)));
 
         verify(this.query).bindValue(BIND_SUBJECT, SUBJECT);
         verify(this.query, times(3)).bindValue(BIND_STORE, FULLNAME);
     }
 
     @Test
-    public void testRetrievingCertificatesUsingSubjectFromSpace() throws Exception
+    void retrievingCertificatesUsingSubjectFromSpace() throws Exception
     {
         CertifiedPublicKey[] certs = mockMultiCertsQuery();
 
-        assertThat(this.store.getCertificateProvider(SPACE_STORE_REF).getCertificate(new DistinguishedName(SUBJECT)),
-            contains(certs));
+        assertIterableEquals(List.of(certs),
+            this.store.getCertificateProvider(SPACE_STORE_REF).getCertificate(new DistinguishedName(SUBJECT)));
 
         verify(this.query).bindValue(BIND_SUBJECT, SUBJECT);
         verify(this.query, times(3)).bindValue(BIND_STORE, SPACE);
     }
 
     @Test
-    public void testRetrievingAllCertificatesFromDocument() throws Exception
+    void retrievingAllCertificatesFromDocument() throws Exception
     {
         CertifiedPublicKey[] certs = mockMultiCertsQuery();
 
-        assertThat(this.store.getAllCertificates(DOC_STORE_REF), contains(certs));
+        assertIterableEquals(List.of(certs), this.store.getAllCertificates(DOC_STORE_REF));
 
         verify(this.query).bindValue(BIND_STORE, FULLNAME);
     }
 
     @Test
-    public void testRetrievingAllCertificatesFromSpace() throws Exception
+    void retrievingAllCertificatesFromSpace() throws Exception
     {
         CertifiedPublicKey[] certs = mockMultiCertsQuery();
 
-        assertThat(this.store.getAllCertificates(SPACE_STORE_REF), contains(certs));
+        assertIterableEquals(List.of(certs), this.store.getAllCertificates(SPACE_STORE_REF));
 
         verify(this.query).bindValue(BIND_STORE, SPACE);
     }
-
 }
